--- a/TODO.txt
+++ b/TODO.txt
@@ -2,16 +2,14 @@ scraper:
 
 
 server:
-download all volumes after after clicking on appropriate button
 
 
 Error handling:
-add "page has timed out" page (used after time has elapsed)
-add "page not found" page (used when faulty url is inputted)
-check url - if not working return error page
+
 
 Website:
 Make website look better
+if no volumes, make only one download button appear / download by 100 chapters
 
 
 No volumes
